Fix dark mode

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1,22 +1,22 @@
 *,
 ::after,
 ::before {
-    box-sizing: border-box
+  box-sizing: border-box;
 }
 
 * {
-    margin: 0
+  margin: 0;
 }
 
 body,
 html {
-    height: 100%
+  height: 100%;
 }
 
 body {
-    line-height: 1.3;
-    -webkit-font-smoothing: antialiased;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0)
+  line-height: 1.3;
+  -webkit-font-smoothing: antialiased;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 canvas,
@@ -24,17 +24,17 @@ img,
 picture,
 svg,
 video {
-    display: block;
-    max-width: 100%
+  display: block;
+  max-width: 100%;
 }
 
 button,
 input,
 select,
 textarea {
-    font: inherit;
-    outline: 0;
-    border: none
+  font: inherit;
+  outline: 0;
+  border: none;
 }
 
 h1,
@@ -44,215 +44,210 @@ h4,
 h5,
 h6,
 p {
-    overflow-wrap: break-word
+  overflow-wrap: break-word;
 }
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 html {
-    font-family: "Be Vietnam Pro", sans-serif;
-    font-size: 16px
+  font-family: "Be Vietnam Pro", sans-serif;
+  font-size: 16px;
 }
 
 ::selection {
-    background-color: orange
+  background-color: orange;
 }
 
 :root {
-    --dark: #000;
-    --light: #fff
+  --dark: #212121;
+  --light: #fff;
+  --blue-dark: #00a179;
 }
 
 body {
-    transition: all .3s ease-out;
-    color: var(--dark);
-    background-color: var(--light)
+  color: var(--dark);
+  background-color: var(--light);
 }
 
 body.dark {
-    --light: #000;
-    --dark: #fff
+  --light: #000;
+  --dark: #fff;
+  --blue-dark: #003d2e;
+}
+body.dark .card--relative::after {
+  background-color: rgba(106, 90, 249, 0.6823529412);
+}
+body.dark .card--relative::before {
+  background-color: rgba(106, 90, 249, 0.6823529412);
 }
 
 a {
-    transition: all .3s ease-out;
-    color: var(--dark);
-    text-decoration: none;
+  color: var(--dark);
+  text-decoration: none;
 }
 
 a:visited {
-    color: var(--dark);
+  color: var(--dark);
 }
 
 .card {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    max-width: 600px;
-    width: calc(100% - 20px);
-    border: solid 1px var(--dark);
+  position: fixed;
+  overflow: hidden;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 600px;
+  width: calc(100% - 20px);
+  border: solid 1px var(--dark);
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  background-color: var(--light);
 }
-
-.card--relative {
-    transition: all .3s ease-out;
-    overflow: hidden;
-    padding: 3rem 5rem 3rem 3rem;
-    position: relative
+.card::after {
+  position: absolute;
+  transition: cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.5s all;
+  content: "";
+  z-index: 1;
+  width: 600px;
+  height: 600px;
+  top: 100%;
+  left: 100%;
+  border-radius: 100rem;
+  background-color: var(--blue-dark);
 }
-
-.card--relative:hover::after {
-    top: 14%;
-    left: 51%
+.card::before {
+  position: absolute;
+  transition: all 0.6s cubic-bezier(0.23, 1, 0.32, 1);
+  content: "";
+  width: 600px;
+  height: 600px;
+  bottom: 100%;
+  z-index: 1;
+  right: 100%;
+  border-radius: 100rem;
+  background-color: var(--blue-dark);
 }
-
-.card--relative:hover::before {
-    bottom: 50%;
-    right: 62%
+.card:hover::after {
+  top: 14%;
+  left: 51%;
 }
-
-.card--relative::after {
-    position: absolute;
-    transition: cubic-bezier(.175, .885, .32, 1.275) .5s all;
-    content: "";
-    width: 600px;
-    height: 600px;
-    top: 100%;
-    left: 100%;
-    border-radius: 100rem;
-    background-color: #b80d0d30
+.card:hover::before {
+  bottom: 50%;
+  right: 62%;
 }
-
-.card--relative::before {
-    position: absolute;
-    transition: all .6s cubic-bezier(.23, 1, .32, 1);
-    content: "";
-    width: 600px;
-    height: 600px;
-    bottom: 100%;
-    right: 100%;
-    border-radius: 100rem;
-    background-color: #b80d0d30
+.card .card--relative {
+  overflow: hidden;
+  padding: 3rem 5rem 3rem 3rem;
+  position: relative;
+  z-index: 100;
 }
-
-.card__name {
-    font-size: 24px;
-    text-transform: uppercase;
-    font-weight: 900
+.card .card__name {
+  font-size: 24px;
+  text-transform: uppercase;
+  font-weight: 900;
 }
-
-.card__job {
-    font-size: 14px;
-    font-weight: 400
+.card .card__job {
+  font-size: 14px;
+  font-weight: 400;
 }
-
-.card__contact--list {
-    list-style: none;
-    margin-top: 20px
+.card .card__contact--list {
+  list-style: none;
+  margin-top: 20px;
 }
-
-.list__item {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    padding: 5px 0
+.card .list__item {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 5px 0;
 }
-
-.list__item .icon {
-    color: #b80d0d
+.card .list__item .icon {
+  color: #b80d0d;
 }
-
-.list__item .list__item--detail {
-    font-size: 14px;
-    font-weight: 400
+.card .list__item .list__item--detail {
+  font-size: 14px;
+  font-weight: 400;
 }
-
-.list__item .list__item--wrapper {
-    display: flex;
-    gap: 10px
+.card .list__item .list__item--wrapper {
+  display: flex;
+  gap: 10px;
 }
-
-.list__item:last-child {
-    align-items: flex-start;
-    flex-direction: column;
-    gap: 0
+.card .list__item:last-child {
+  align-items: flex-start;
+  flex-direction: column;
+  gap: 0;
 }
-
-.list__item .list__item--description {
-    font-size: 14px;
-    font-weight: 400
+.card .list__item .list__item--description {
+  font-size: 14px;
+  font-weight: 400;
 }
 
 .dark--mode {
-    text-align: center;
-    position: fixed;
-    top: 30px;
-    right: 30px
+  text-align: center;
+  position: fixed;
+  top: 30px;
+  right: 30px;
 }
-
 .dark--mode .description {
-    margin-top: 5px
+  margin-top: 5px;
 }
 
 .switch {
-    position: relative;
-    display: inline-block;
-    width: 60px;
-    height: 34px
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
 }
-
 .switch input {
-    opacity: 0;
-    width: 0;
-    height: 0
+  opacity: 0;
+  width: 0;
+  height: 0;
 }
 
 .slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #ccc;
-    -webkit-transition: .4s;
-    transition: .4s
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
-
-.slider:before {
-    position: absolute;
-    content: "";
-    height: 26px;
-    width: 26px;
-    left: 4px;
-    bottom: 4px;
-    background-color: #fff;
-    -webkit-transition: .4s;
-    transition: .4s
+.slider::before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: #fff;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
-
-input:checked+.slider {
-    background-color: #2196f3
-}
-
-input:focus+.slider {
-    box-shadow: 0 0 1px #2196f3
-}
-
-input:checked+.slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px)
-}
-
 .slider.round {
-    border-radius: 34px
+  border-radius: 34px;
+}
+.slider.round:before {
+  border-radius: 50%;
 }
 
-.slider.round:before {
-    border-radius: 50%
+input:checked + .slider {
+  background-color: #2196f3;
 }
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196f3;
+}
+
+input:checked + .slider::before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+  background-color: var(--dark);
+}
+
+/*# sourceMappingURL=index.css.map */
